; ModuleID = '/home/carl/AnghaBench/redis/deps/jemalloc/test/integration/extr_thread_arena.c_mallctl_failure.c'
source_filename = "/home/carl/AnghaBench/redis/deps/jemalloc/test/integration/extr_thread_arena.c_mallctl_failure.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUFERROR_BUF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Error in mallctl(): %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @mallctl_failure to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mallctl_failure(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @BUFERROR_BUF, align 4
  %6 = zext i32 %5 to i64
  %7 = call i8* @llvm.stacksave()
  store i8* %7, i8** %3, align 8
  %8 = alloca i8, i64 %6, align 16
  store i64 %6, i64* %4, align 8
  %9 = load i32, i32* %2, align 4
  %10 = trunc i64 %6 to i32
  %11 = call i32 @buferror(i32 %9, i8* %8, i32 %10)
  %12 = call i32 @test_fail(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %8)
  %13 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %13)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @buferror(i32, i8*, i32) #2

declare dso_local i32 @test_fail(i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
